--- a/code/index.html
+++ b/code/index.html
@@ -11,15 +11,15 @@
             div { border: solid thin black; border-radius: 10px; margin-left: 0.2em; margin-top: 0.2em; }
             div { display: inline-flex; align-items: center; justify-content: center; }
             div { background-color: white; }
-            main { padding-right: 0.2em; }
-            div.long { width: 90%; height: 0.6em; }
+            main { padding-right: 0.2em; user-select: none; }
+            div.long { width: calc(100% - 0.4em); height: 0.6em; }
             div:hover { background-color: lightgreen; }
             div.down { background-color: crimson; color: yellow; }
             main { background-color: aliceblue; }
             main p { margin-top: 3em; margin-bottom: 3em; }
             header, footer { padding: 0.2em 1em 0.2em 1em; }
             header label:last-of-type { margin-left: 1em; }
-            footer input { width: 100%; border: none; }
+            footer input { width: calc(100% - 1.4em); border: none; font-size: 140%; padding-left: 0.6em; padding-right: 0.6em; }
             main section:first-of-type { display: none; }
         </style>
     </head>
